log
Fri May  1 05:57:35 PM UTC 2026: 
 treemap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  4|7
total_score: 5/60
17e4dd0
Fri May  1 06:13:11 PM UTC 2026: 
 treemap.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:75:29: error: expected ‘;’ before ‘}’ token
   75 |             aux = aux->right
      |                             ^
      |                             ;
   76 |         }
      |         ~                    
9de06a6
Fri May  1 06:13:27 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/60
d7649f9
Fri May  1 06:33:46 PM UTC 2026: 
 treemap.c | 33 ++++++++++++++++++++++++++++++++-
 1 file changed, 32 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:88:16: error: ‘return’ with a value, in function returning void [-Wreturn-mismatch]
   88 |         return NULL;
      |                ^~~~
treemap.c:86:6: note: declared here
   86 | void insertTreeMap(TreeMap * tree, void* key, void * value) {
      |      ^~~~~~~~~~~~~
d7d6628
Fri May  1 06:35:16 PM UTC 2026: 
 treemap.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  13|5
total_score: 25/60
6b2df6c
Fri May  1 06:40:46 PM UTC 2026: 
 treemap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  15|4
total_score: 25/60
6494bcf
Fri May  1 07:07:13 PM UTC 2026: 
 treemap.c | 46 +++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 45 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:146:17: error: ‘parent’ undeclared (first use in this function)
  146 |         if(node-parent == NULL){
      |                 ^~~~~~
treemap.c:146:17: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:183:23: error: implicit declaration of function ‘minium’; did you mean ‘minimum’? [-Wimplicit-function-declaration]
  183 |     TreeNode* menor = minium(node->right);
      |                       ^~~~~~
      |                       minimum
treemap.c:183:23: error: initialization of ‘TreeNode *’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
db08ab8
Fri May  1 07:08:24 PM UTC 2026: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  18|3
total_score: 35/60
d58df56
Fri May  1 07:13:30 PM UTC 2026: 
 treemap.c | 5 +++++
 1 file changed, 5 insertions(+)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘firstTreeMap’:
treemap.c:208:5: error: expected ‘,’ or ‘;’ before ‘tree’
  208 |     tree->current = menor;
      |     ^~~~
870b47f
Fri May  1 07:14:03 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  20|2
total_score: 40/60
e1783bd
Fri May  1 07:27:19 PM UTC 2026: 
 treemap.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  22|2
total_score: 43/60
7d9c6eb
Fri May  1 07:30:57 PM UTC 2026: 
 treemap.c | 12 +++++++-----
 1 file changed, 7 insertions(+), 5 deletions(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘nextTreeMap’:
treemap.c:224:15: error: statement with no effect [-Werror=unused-value]
  224 |         parent->parent;
      |         ~~~~~~^~~~~~~~
cc1: all warnings being treated as errors
3991d8c
Fri May  1 07:31:31 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  22|2
total_score: 43/60
04723a8
